[fix] hide overflow on large modal and disable body scrolling

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -10,6 +10,7 @@
   top: 0;
   background: rgba(0, 0, 0, 0.6);
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
   overflow-y: auto;
   user-select: none;
 
